@@ -1,4 +1,4 @@
-# $NetBSD: ALL,v 1.166 2008/04/13 04:59:45 tsutsui Exp $
+# $NetBSD: ALL,v 1.167 2008/04/22 22:37:14 cegger Exp $
 # From NetBSD: GENERIC,v 1.787 2006/10/01 18:37:54 bouyer Exp
 #
 # ALL machine description file
@@ -17,7 +17,7 @@ include 	"arch/i386/conf/std.i386"
 
 options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident 		"ALL-$Revision: 1.166 $"
+#ident 		"ALL-$Revision: 1.167 $"
 
 maxusers	32		# estimated number of users
 
@@ -625,6 +625,8 @@ lpt1	at isa? port 0x278
 lpt2	at isa? port 0x3bc
 
 # Hardware monitors
+
+amdtemp* at pci? dev ? function ?	# AMD CPU Temperature sensors
 
 # AMD 768 and 8111 power/ACPI controllers
 amdpm*	at pci? dev ? function ?	# RNG and SMBus 1.0 interface
